--- a/index.html
+++ b/index.html
@@ -531,11 +531,12 @@ Remember — a valid jwt must be sent as an Authorization header!
 Remember — a valid jwt must be sent as an Authorization header!
 </aside>
 <h1 id='errors'>Errors</h1>
+<!-- 
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
-</aside>
+</aside> -->
 
-<p>The Kittn API uses the following error codes:</p>
+<p>The Gigapet API uses the following error codes:</p>
 
 <table><thead>
 <tr>
