publish: change child id
generated from commit 24967d387adeb4c0652a0e331a89163b5c4e5688

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ Remember — a valid jwt must be sent as an Authorization header!
 </span></code></pre>
 <p>This endpoint returns all food entries for a specific child.</p>
 <h3 id='http-request-11'>HTTP Request</h3>
-<p><code>POST http://localhost:8000/api/parent/:parent_id</code></p>
+<p><code>POST https://lambda-gigapet.herokuapp.com/api/child/:child_id/entries</code></p>
 
 <aside class="success">
 Remember — a valid jwt must be sent as an Authorization header!
