publish: add treats
generated from commit f0cd13502cf72ad6683dfb57580d138805fc777e

--- a/index.html
+++ b/index.html
@@ -622,7 +622,8 @@ Remember — a valid jwt must be sent as an Authorization header!
   </span><span class="s2">"protein"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
   </span><span class="s2">"vegetables"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
   </span><span class="s2">"fruits"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
-  </span><span class="s2">"dairy"</span><span class="p">:</span><span class="w"> </span><span class="p">[]</span><span class="w">
+  </span><span class="s2">"dairy"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
+  </span><span class="s2">"treats"</span><span class="p">:</span><span class="w"> </span><span class="p">[]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <p>This endpoint returns all food entries for a specific child.</p>
@@ -669,7 +670,7 @@ Remember — a valid jwt must be sent as an Authorization header!
 <tr>
 <td>category</td>
 <td>null</td>
-<td>protein, carbs, diary, vegetables, fruit</td>
+<td>protein, carbs, diary, vegetables, fruit, treats</td>
 <td>If not set, will return all categories</td>
 </tr>
 <tr>
